--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ footer {
 section {
     /* min-height: 95% !important; */
     width: 100%;
+    font-family: 'Lato', sans-serif;
+}
+
+.container {
+    height: inherit;
 }
 
 /*---------------------------
@@ -32,16 +37,15 @@ CAROUSEL
 
 /** * Designed by Upperquad [https://upperquad.com] developed by Aranja [https://aranja.com] for Facebook. * See it live on https://nonprofits.fb.com/learn-the-basics */
 
+.Candidates {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    border: solid 2px salmon;
+}
 img {
     width: 50%;
     border-radius: 50%;
-}
-.Candidates {
-    position: relative;
-    width: 21.8125em;
-    /* height: 25.5625em; */
-    height: 50%;
-    margin: 2.1875em auto 0 auto;
 }
 /* @media (min-width: 103.125em) {
     .Candidates::before, .Candidates::after {
@@ -65,15 +69,27 @@ img {
 .Candidates-slides {
     position: relative;
     display: flex;
-    top: 5em;
-    padding-left: 0.3125em;
+    height: 100%;
+    overflow: hidden;
+    /* justify-content: space-evenly; */
 }
 .Candidates-slide {
     position: absolute;
-    padding-left: 0.625em;
-    top: 3.5625em;
-    width: 20em;
-    height: 16.9375em;
+    width: 100%;
+    padding: 30px 10px;
+    height: 250px;
+}
+
+@media (min-width: 475px) {
+    .Candidates-slide {
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) {
+    .Candidates-slide {
+        width: 33.333%;
+    }
 }
 
 .speech-preview::after {
@@ -97,23 +113,41 @@ img {
 }
 @keyframes Candidates-animation {
     0%, 16% {
-        transform: translateX(200%);
+        transform: translateX(300%);
    }
     20%, 36% {
-        transform: translateX(100%);
+        transform: translateX(200%);
    }
     40%, 56% {
-        transform: translateX(0%);
+        transform: translateX(100%);
    }
     60%, 76% {
-        transform: translateX(-100%);
+        transform: translateX(0%);
    }
     80%, 96% {
-        transform: translateX(-200%);
+        transform: translateX(-100%);
    }
     100%, 100% {
-        transform: translateX(-300%);
+        transform: translateX(-200%);
    }
+}
+
+/*---------------------------
+SETTINGS
+---------------------------*/
+.settings {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 475px) {
+    .settings {
+        flex-direction: row;
+    }
+}
+
+.settings-advanced {
+    display: none;
 }
 
 /*---------------------------
