--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ html,
 body {
     /* height: 100% !important; */
     margin: 0 !important;
-    /* background-color: rgb(10, 25, 66); */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,36 +51,18 @@ CAROUSEL
     width: 100%;
     height: 350px;
     border: solid 2px salmon;
+    border-radius: 5px;
 }
 img {
     width: 50%;
     border-radius: 50%;
 }
-/* @media (min-width: 103.125em) {
-    .Candidates::before, .Candidates::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        z-index: 1;
-        width: 20em;
-        height: 100%;
-   }
-    .Candidates::before {
-        right: calc(-50vw + 50%);
-        background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff, #fff);
-   }
-    .Candidates::after {
-        left: calc(-50vw + 50%);
-        background: linear-gradient(to left, rgba(255, 255, 255, 0), #fff, #fff);
-   }
-} */
 
 .Candidates-slides {
     position: relative;
     display: flex;
     height: 100%;
     overflow: hidden;
-    /* justify-content: space-evenly; */
 }
 .Candidates-slide {
     position: absolute;
@@ -155,9 +136,32 @@ SETTINGS
     width: 100%;
 }
 
+.settings-left, .settings-right {
+    margin-bottom: 1em;
+}
+
+@media (min-width: 475px) {
+    .settings-form {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .settings-left, .settings-right {
+        width: 50%;
+    }
+}
+
 @media (min-width: 768px) {
     .settings {
         flex-direction: row;
+    }
+
+    .settings-form {
+        flex-direction: column;
+    }
+
+    .settings-left, .settings-right {
+        width: 100%;
     }
 
     .settings-col {
@@ -165,17 +169,31 @@ SETTINGS
     }
 }
 
+#candidate_speech_prompt {
+    font-weight: 400;
+}
+
 .settings-advanced {
     display: none;
 }
 
+/* SELECT DROPDOWN --------------------- */
+
+.settings-select {
+    display: block;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.3em;
+    font-weight: 900;
+    border: solid 2px salmon;
+    border-radius: 5px;
+}
 
 /*---------------------------
 ORIGINAL STYLES
 ---------------------------*/
 
 .gen-box {
-    background-color: #aaf;
+    background-color: #fff;
     display: block;
     padding: 1.25rem;
     color: #4a4a4a;
@@ -193,12 +211,6 @@ ORIGINAL STYLES
     color: red;
     font-weight: 700;
 
-}
-
-.brand-text {
-    display: flex;
-    align-items: center;
-    font-size: 1.5em
 }
 
 #extra-buttons {
