--- a/styles.css
+++ b/styles.css
@@ -212,13 +212,23 @@ ORIGINAL STYLES
 ---------------------------*/
 
 .gen-box {
-    background-color: #fff;
-    display: block;
+    display: flex;
+    flex-direction: row;
     padding: 1.25rem;
     color: #2c2c2c;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.25;
+}
+
+img.thumbnail {
+    width: 3em;
+    height: 3em;
+    margin-right: 1em;
+}
+
+#generate-text {
+    background-color: #d41b2c;
 }
 
 .gen-border {
